Revert "Silence warnings"
This reverts commit ee5e96d35f3fca690ca755b842a9c41340062dca.